# diagmc-potpourri

./: .gitignore  .parsed_config.json  Makefile  README.md  chi_ch_example  config.json  config.jsonc  config.yml  diaggen_tools.py  generate_diagrams.py  generate_propagators.py  github.qr  graph_info.json  hub_2dsqlat_cf_meas  hub_2dsqlat_rt_mcmc  hub_2dsqlat_rt_mcmc_cf_meas  ini  k_path_info.json  lattice_tools.py  make.sh  mb_hub_2dsqlat_rt_mcmc_cf_meas  misc_tools.py  plot.py  run_diagmc.py  run_mb_diagmc.py  self_en_example
config_templates/: chi_ch_example_config.yml  chi_ch_example_graph_info.json  self_en_example_config.yml  self_en_example_graph_info.json
examples/chi_ch_examples/n=1, beta=10, U=1/: chi_ch_hub_2dsqlat_run_1629109813.h5  config.yml
examples/chi_ch_examples/n=1, beta=10, U=4/: config.yml
include/: diaggen.hpp  diagmc_hubbard_2dsqlat.hpp  diagmc_includes.hpp  diagmc_integrators.hpp  diagmc_tools.hpp  random.hpp
profiling/run_1626731784/: chi_ch_hub_2dsqlat_run_1626731784.h5
propagators/proprs_1624557646/: lat_g0_rt.h5  lat_pi0_q4.h5
propagators/proprs_1624557653/: lat_g0_rt.h5  lat_pi0_q4.h5
propagators/proprs_1624557661/: lat_g0_rt.h5  lat_pi0_q4.h5
propagators/proprs_1624557670/: lat_g0_rt.h5  lat_pi0_q4.h5
propagators/proprs_1624557677/: lat_g0_rt.h5  lat_pi0_q4.h5
propagators/proprs_1624912165/: lat_g0_rt.h5  lat_pi0_q4.h5
propagators/proprs_1624912741/: lat_g0_rt.h5  lat_pi0_q4.h5
propagators/proprs_1625094199/: lat_g0_rt.h5  lat_pi0_q4.h5
propagators/proprs_1625109476/: lat_g0_rt.h5  lat_pi0_q4.h5
propagators/proprs_1625172882/: lat_g0_rt.h5  lat_pi0_q4.h5
propagators/proprs_1629103724/: lat_g0_rt_1629103724.h5  lat_pi0_q4_1629103724.h5
propagators/proprs_1629105698/: lat_g0_rt_1629105698.h5  lat_pi0_q4_1629105698.h5
propagators/proprs_1629107312/: lat_g0_rt_1629107312.h5  lat_pi0_q4_1629107312.h5
propagators/proprs_1629108134/: lat_g0_rt_1629108134.h5  lat_pi0_q4_1629108134.h5
propagators/proprs_1629108142/: lat_g0_rt_1629108142.h5  lat_pi0_q4_1629108142.h5
propagators/proprs_1629108154/: lat_g0_rt_1629108154.h5  lat_pi0_q4_1629108154.h5
propagators/proprs_1629108160/: lat_g0_rt_1629108160.h5  lat_pi0_q4_1629108160.h5
propagators/proprs_1631544362/: lat_g0_rt_1631544362.h5  lat_pi0_q4_1631544362.h5
propagators/proprs_1631548301/: lat_g0_rt_1631548301.h5  lat_pi0_q4_1631548301.h5
propagators/proprs_1631549537/: lat_g0_rt_1631549537.h5  lat_pi0_q4_1631549537.h5
results/beta=10, U=0.1/: chi_ch_hub_2dsqlat_run_1624926209.h5
results/beta=10, U=1/: chi_ch_hub_2dsqlat_run_1624927311.h5
results/beta=10, U=4/: chi_ch_hub_2dsqlat_run_1624928428.h5
results/beta=100, U=1/: chi_ch_hub_2dsqlat_run_1624923939.h5
results/chi_ch_example/beta=10, U=2/: chi_ch_hub_2dsqlat_run_1624927865.h5
results/chi_ch_examples/n=1, beta=10, U=0.5/: chi_ch_hub_2dsqlat_run_1624926739.h5  chi_ch_hub_2dsqlat_run_1629109433.h5  config.json  config.yml
results/chi_ch_examples/n=1, beta=10, U=1/: config.json
results/chi_ch_examples/n=1, beta=10, U=2/: chi_ch_hub_2dsqlat_run_1629110190.h5  config.json  config.yml
results/chi_ch_examples/n=1, beta=10, U=4/: chi_ch_hub_2dsqlat_run_1629110557.h5  config.json
results/chi_ch_examples/n=1, beta=100, U=1/: chi_ch_hub_2dsqlat_run_1629111207.h5  config.json
results/self_en_example/run_1625109804/: self_en_dyn_hub_2dsqlat_run_1625109804.h5
results/self_en_examples/n=0.3, beta=2, U=2/: config.json  config.yml  self_en_dyn_hub_2dsqlat_run_1625172983.h5  self_en_dyn_hub_2dsqlat_run_1629107326.h5
results/self_en_examples/n=1, beta=2, U=2/: config.json  config.yml  self_en_dyn_hub_2dsqlat_run_1629106445.h5
results/self_en_examples/run_1625132382/: self_en_dyn_hub_2dsqlat_run_1625132382.h5
run_1625005854/: chi_ch_hub_2dsqlat_run_1625005854.h5
run_1625006314/: chi_ch_hub_2dsqlat_run_1625006314.h5
run_1625006913/: chi_ch_hub_2dsqlat_run_1625006913.h5
run_1625007194/: chi_ch_hub_2dsqlat_run_1625007194.h5
run_1625007741/: chi_ch_hub_2dsqlat_run_1625007741.h5
run_1625036128/: chi_ch_hub_2dsqlat_run_1625036128.h5
run_1625038232/: chi_ch_hub_2dsqlat_run_1625038232.h5
run_1625071876/: chi_ch_hub_2dsqlat_run_1625071876.h5
run_1625075604/: chi_ch_hub_2dsqlat_run_1625075604.h5
run_1626730403/: chi_ch_hub_2dsqlat_run_1626730403.h5
run_1626731111/: chi_ch_hub_2dsqlat_run_1626731111.h5
src/: CMakeLists.txt  diagmc_hubbard_2dsqlat.hpp  diagmc_includes.hpp  diagmc_tools.hpp  hub_2dsqlat_rt_mcmc.cpp  hub_2dsqlat_rt_mcmc_cf_meas.cpp  hub_2dsqlat_rt_mcmc_chi_ch_example.cpp  hub_2dsqlat_rt_mcmc_self_en_example.cpp  mb_hub_2dsqlat_rt_mcmc_cf_meas.cpp  random.cpp
src/build_tests/: test_boost_filesystem.cpp  test_experimental_filesystem.cpp  test_filesystem.cpp
test_mb/: lattice_tools.py  plot_test_mb.py
